--- a/Day_1/Day_3.css
+++ b/Day_1/Day_3.css
@@ -1,21 +1,22 @@
-*{
+/* /* *{
     margin-bottom: 20px;
-}
+} */
 button{
-    color: blue;
+    color: cyan;
+    background-color:navy;
     padding: 10px;
     border: 0px;
     font-size: 20px;
-    border-radius: 50px;
-    height: 50px;
-    width: 200px;
+    border-radius: 20px;
+    height: 40px;
+    width: 100px;
     cursor: pointer;
 }
-/* button:hover{
+button:hover{
     background-color: blue;
     color: aqua;
     cursor: pointer;
-} */
+}
 /* .container{
     border: 3px solid rgb(10, 231, 231);
     background-color: bisque;
@@ -36,13 +37,13 @@ button{
     content: " Bye";
     color: blue;
 } */
-.my-flex{
+/* .my-flex{
     display: flex;
     height: 100vh;
-    align-items: center;
-    justify-content: center;
+    align-items: start;
+    justify-content: end;
     gap: 10px;
-    flex-direction: column;
+    flex-direction: row;
 }
 .cancel{
     background-color: red;
@@ -60,4 +61,34 @@ button{
     background-color: blue;
     color: aqua;
     
+} */ 
+body{
+    background-color: cyan;
+}
+.content-container{
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    justify-content: start;
+    align-items: center;
+}
+.login-form{
+    background-color: aliceblue;
+    padding: 20px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+#login-title{
+    text-align: center;
+}
+.checkbox{
+    display: flex;
+    gap: 7px;
+}
+.button-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
