making some changes
making some changes

--- a/Day_1/Assignment_3/Assignment_3.css
+++ b/Day_1/Assignment_3/Assignment_3.css
@@ -109,6 +109,9 @@ img{
 button{
     border: 0px;
 }
+button:hover{
+    cursor: pointer;
+}
 .submit-btn:hover{
     background-color: #0c4fff;
 }
