--- a/Day_1/React/client/src/App.css
+++ b/Day_1/React/client/src/App.css
@@ -1,53 +1,18 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 div{
   color:white;
   background-color: blue;
   display: flex;
-  /* flex-direction: column; */
+  flex-direction: row;
+  /* position: relative; */
   justify-content: center;
-  gap: 10px;
+  align-items: center;
+  gap: 80px;
+  /* height: 30px; */
 }
 .nav{
   display: flex;
-  /* flex-direction: column; */
-  position: relative;
-  top: 25px;
-  right: 120px;
+  justify-content: center;
+  color: black;
+  position: absolute;
+  top: 85px;
 }
